# SPTAG

./: .gitignore  CMakeLists.txt  SPTAG.sln
AnnService/: Aggregator.vcxproj  BalancedDataPartition.vcxproj  CMakeLists.txt  CoreLibrary.vcxproj  SSDServing.vcxproj  SSDServing.vcxproj.filters  SSDServingStarter.vcxproj  SSDServingStarter.vcxproj.filters
AnnService/inc/Core/: DefinitionList.h  SearchResult.h  VectorIndex.h  VectorSet.h
AnnService/inc/Core/BKT/: Index.h
AnnService/inc/Core/Common/: BKTree.h  BKTreeUpdate.h  Dataset.h  KDTree.h  Labelset.h  NeighborhoodGraph.h  QueryResultSet.h  VersionLabel.h  WorkSpace.h
AnnService/inc/Core/KDT/: Index.h
AnnService/inc/Core/SPANN/: ExtraFullGraphSearcher.h  ExtraRocksDBController.h  IExtraSearcher.h  Index.h  Options.h  ParameterDefinitionList.h  PersistentBuffer.h
AnnService/inc/Helper/: DiskIO.h  KeyValueIO.h  StringConvert.h
AnnService/inc/SSDServing/: SSDIndex.h
AnnService/inc/SSDServing/BuildHead/: BootBuildHead.h  Options.h  ParameterDefinitionList.h
AnnService/inc/SSDServing/Common/: Utils.h  stdafx.h
AnnService/inc/SSDServing/IndexBuildManager/: CommonDefines.h  Options.h  ParameterDefinitionList.h  Utils.h
AnnService/inc/SSDServing/SelectHead_BKT/: AnalyzeTree.h  BuildBKT.h  Options.h  ParameterDefinitionList.h  SelectHead.h
AnnService/inc/SSDServing/VectorSearch/: AnnMergeOperator.h  BootVectorSearch.h  BuildSsdIndex.h  DynamicNeighbors.h  ExtraFullGraphSearcher.h  ExtraFullGraphSearcherLinux.h  ExtraGraphSearcher.h  IExtraSearcher.h  IExtraSearcherLinux.h  Options.h  ParameterDefinitionList.h  PersistentBuffer.h  SearchDefault.h  SearchProcessor.h  SearchSsdIndex.h  SearchStats.h  VectorSearchUtils.h
AnnService/src/BalancedDataPartition/: main.cpp
AnnService/src/Core/: VectorIndex.cpp  VectorSet.cpp
AnnService/src/Core/BKT/: BKTIndex.cpp
AnnService/src/Core/KDT/: KDTIndex.cpp
AnnService/src/Core/SPANN/: SPANNIndex.cpp
AnnService/src/SSDServing/: main.cpp
AnnService/src/SSDServing/BuildHead/: BootBuildHead.cpp
AnnService/src/SSDServing/IndexBuildManager/: Utils.cpp  main.cpp
AnnService/src/SSDServing/SelectHead_BKT/: AnalyzeTree.cpp  BootSelectHead.cpp  SelectHead.cpp
AnnService/src/SSDServing/VectorSearch/: BootVectorSearch.cpp  DiskFileReader.cpp  ExtraFullGraphSearcher.cpp  PrioritizedDiskFileReader.cpp  TimeUtils.cpp
AnnService/src/SSDServingStarter/: main.cpp
GPUSupport/: CMakeLists.txt
Test/: CMakeLists.txt  Test.vcxproj
Test/src/: SPFreshTest.cpp  SSDServingTest.cpp
ini/: test.ini
inifile/: sift1m_incremental19.ini  spacev1m_incremental19.ini
